# programming-optimization-assignments

./: Pipfile  pyproject.toml
assignment 1/: main.py
assignment1/: main.py
assignment2/: main.py  penultimate-submission-assignment2.py
assignment3/: main.py
