[tool.poetry]
name = "programming-optimization-assignments"
authors = ["Gabriele Bettineschi <gbettineschi29@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.3"
pulp = "^3.0.2"
networkx = "^3.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.8"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true