[project]
name = "programming-optimization-assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pulp>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
